# SizeBot

./: .flake8  .gitignore  .pylintrc  .travis.yml  MANIFEST.in  PRIVACY.md  Pipfile  README.md  TODO.md  TOS.md  build.sh  changelog.md  conf.py  digiAPI.md  digiSV.py  digidecimal.py  digierror.py  digiformatter.py  digilogger.py  digisize.py  facts.txt  gifts.txt  globalsb.py  hexstring.txt  iddb.py  main.py  old_build.sh  pyproject.toml  refactoring todo.txt  requirements-dev.txt  requirements.txt  royale-spec.txt  run3.bat  run3.sh  setup.cfg  setup.py  styleguide.md  styling_rules.md  test.py  test.sh  (+3 more)
.github/: FUNDING.yml
.github/actions/append-buildnum/: action.yml
.github/workflows/: publish-to-pypi.yml  publish-to-testpypi.yml
changelogs/: 3.5.0.dev0.md  3.5.0.md  3.5.0a1.md  3.5.md  3.6.md  3.7.md  3.8.md  3.9.md
cogs/: banned.py  change.py  christmas.py  dm.py  fun.py  listofcogs.txt  mod.py  monika.py  register.py  roleplay.py  set.py  stats.py  statsplus.py  winks.py
discordplus/: __init__.py  bot.py  client.py  command.py  embed.py  member.py  messageable.py  snowflake.py  tasks.py
examples/: sizebot.conf  sizebot.service
scripts/: cpick.py  getch.py  importEntities.js  upgradeusers.py
sizebot/: __init__.py  __main__.py  checks.py  conf.py  digiSV.py  digidecimal.py  digierror.py  digieval.py  digiformatter.py  digilogger.py  digiobj.py  digisize.py  digitypes.py  globalsb.py  iddb.py  logger.py  main.py  picker.py  roller.py  telemetry.py  userdb.py  utils.py
sizebot/cogs/: admin.py  banned.py  change.py  christmas.py  color.py  dm.py  edge.py  errorhandler.py  eval.py  fun.py  help.py  holiday.py  keypad.py  limits.py  loop.py  meicros.py  mod.py  monika.py  multiplayer.py  naptime.py  objects.py  pokemon.py  profile.py  quake.py  rainbow.py  register.py  roleplay.py  roll.py  royale.py  run.py  say.py  scaletalk.py  scalewalk.py  set.py  setbase.py  stats.py  test.py  this.py  thistracker.py  trigger.py  (+3 more)
sizebot/data/: constants.ini  drinkme.txt  eatme.txt  facts.csv  gifts.txt  ids.txt  models.json  monikalines.txt  objects.json  overrides.json  plurals.ini  pokemon.json  royale-spec.txt  sv.json  wv.json
sizebot/data/objects/: buildings.json  countries.json  food.json  land.json  objects.json  space.json
sizebot/data/units/: av.json  tv.json  vv.json  wv.json
sizebot/discordplus/: __init__.py  bot.py  client.py  command.py  commands.py  commandsplus.py  embed.py  member.py  messageable.py
sizebot/extensions/: banned.py  errorhandler.py  telemetry.py  tupperbox.py
sizebot/lib/: api.py  attrdict.py  betterstats.py  change.py  changes.py  checks.py  constants.py  decimal.py  diff.py  digidecimal.py  discordlogger.py  discordplusplus.py  errors.py  eval.py  facts.py  fakeplayer.py  freefall.py  gender.py  guilddb.py  language.py  loglevels.py  look.py  macrovision.py  menu.py  metal.py  naps.py  neuron.py  nickmanager.py  objs.py  pathdict.py  paths.py  picker.py  pokemon.py  proportions.py  quake.py  roller.py  runners.py  shoesize.py  speed.py  stat.py  (+13 more)
sizebot/plugins/: active.py  edge.py  meicros.py  monika.py
sizebot/scripts/: cpick.py  gen_pokemon.py  getch.py  importEntities.js  upgradeusers.py
sizebot/units/: objects.json  sv.json  tv.json  wv.json
sizebotapi/: __main__.py  main.py
sizeroyale/: __init__.py  __main__.py  main.py
sizeroyale/lib/: attrdict.py  embedtemplate.py  errors.py  img_utils.py  listdict.py  loglevels.py  runnableevent.py  units.py  utils.py
sizeroyale/lib/classes/: arena.py  dummyplayer.py  event.py  game.py  metaparser.py  parser.py  player.py  royale.py  setup.py
tests/: statstest.bat  statstest.py  test_change.py  test_decimal.py  test_digiSV.py  test_digidecimal.py  test_freefall.py  test_has_size_tag.py  test_infinite.py  test_macrovision.py  test_plurals.py  test_proportions.py  test_say.py  test_strip_size_tag.py  test_units.py  test_utils.py  userdbtest.py
text/: monikalines.txt
