[metadata]
name = sizebot
version = attr: sizebot.__version__
description = sizebot
long_description = file: README.md
long_description_content_type = text/markdown
author = DigiDuncan
author_email = digiduncan@gmail.com
license = GPLv3
license_file = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
keywords = sizebot
project_urls =
    Source=https://github.com/sizedev/sizebot
    Tracker=https://github.com/sizedev/sizebot/issues

[options]
packages = find:
python_requires = >=3.8
zip_safe = yes
include_package_data = True
install_requires =
    colored==1.4.2
    discord.py==1.5.1
    appdirs==1.4.3
    toml==0.10.0
    numpy==1.23.1
    numexpr==2.7.1
    PyNaCl==1.4.0
    digiformatter==0.5.7.2
    python-dateutil==2.8.1
    requests==2.22.0
    inflect==4.1.0
    arrow==0.15.6
    validator-collection==1.4.1
    flask==1.1.2
    pytz==2020.4
    pillow==8.1.1
    tqdm==4.51.0
    aiohttp_requests==0.1.3
    asyncstdlib==3.9.0
    ndjson==0.3.1
    packaging==20.8
    SizeRoyale @ git+ssh://git@github.com/SizeDev/SizeRoyale.git

[options.extras_require]
dev =
    pytest==6.2.2
    flake8==3.8.4
    autopep8==1.5.5
    pytest-asyncio==0.14.0

[options.entry_points]
console_scripts =
    sizebot = sizebot.main:main
    sizebotapi = sizebotapi.main:main
    sizebot-upgrade = sizebot.scripts.upgradeusers:main

[flake8]
ignore = E501,W503,E241,E251,E266
per-file-ignores =
    */__init__.py:F401,F403

[pylint.TYPECHECK]
generated-members=style.*,fore.*,back.*
