[metadata]
name = sizebot
version = attr: sizebot.__version__
description = sizebot
long_description = file: README.md
long_description_content_type = text/markdown
author = DigiDuncan
author_email = digiduncan@gmail.com
license = GPLv3
license_file = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
keywords = sizebot
project_urls =
    Source=https://github.com/sizedev/sizebot
    Tracker=https://github.com/sizedev/sizebot/issues

[options]
packages = find:
python_requires = >=3.12
zip_safe = yes
include_package_data = True
install_requires =
    colored==1.4.2
    discord.py==2.3.2
    appdirs==1.4.4
    toml==0.10.2
    numpy==1.26.4
    PyNaCl==1.5.0
    digiformatter==0.5.7.2
    python-dateutil==2.9.0.post0
    requests==2.31.0
    inflect==7.0.0
    arrow==1.3.0
    validator-collection==1.5.0
    flask==3.0.2
    jinja2==3.1.3
    itsdangerous==2.1.2
    werkzeug==3.0.1
    pytz==2024.1
    pillow==10.2.0
    tqdm==4.66.2
    aiohttp_requests==0.2.3
    asyncstdlib==3.12.1
    ndjson==0.3.1
    packaging==24.0
    sizeroyale==1.0.5
    numexpr==2.9.0

[options.extras_require]
dev =
    pytest==8.1.1
    flake8==7.0.0
    autopep8==2.0.4
    pytest-asyncio==0.23.5.post1
    flake8-annotations==3.1.0

[options.entry_points]
console_scripts =
    sizebot = sizebot.main:main
    sizebotapi = sizebotapi.main:main
    sizebot-upgrade = sizebot.scripts.upgradeusers:main

[flake8]
ignore = E501,W503,E241,E251,E266,ANN101,ANN102,ANN401,ANN002,ANN003
per-file-ignores =
    */__init__.py:F401,F403
    sizebot/lib/proportions.py:E241,E272
mypy-init-return = true
suppress-none-returning = true

[pylint.TYPECHECK]
generated-members=style.*,fore.*,back.*
